# pythondaq

./: .gitignore  arduino_device.py  basisscript.py  diode_experiment.py  pyproject.toml  view.py
src/pythondaq/: arduino_device.py  cli.py  diode_experiment.py  diode_experiment_test.py  gui.py  interface.ui  test_interface_.ui  ui_interface.py  ui_test_interface.py  view.py
test/: test_imports.py
