[tool.poetry]
name = "pythondaq"
version = "0.1.0"
description = ""
authors = ["MissaFissa <meho11@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
pyvisa-py = "^0.7.2"
serial = "^0.0.97"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
initiate_experiment = "pythondaq.view:initiate_experiment"
